<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/textView" />

    <Button
        android:id="@+id/ej1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:text="@string/ejercicio_1" />

    <Button
        android:id="@+id/ej2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/ej1"
        android:layout_below="@+id/ej1"
        android:text="@string/ejercicio_2" />

    <Button
        android:id="@+id/ej3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/ej2"
        android:layout_below="@+id/ej2"
        android:text="@string/ejerccicio_3" />

    <Button
        android:id="@+id/ej4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/ej3"
        android:layout_below="@+id/ej3"
        android:text="@string/ejercicio_3" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/ej4"
        android:layout_below="@+id/ej4"
        android:layout_marginStart="56dp"
        android:layout_marginTop="69dp"
        android:text="@string/txtBtnSalir" />
</RelativeLayout>
